--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "exportxml",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">16"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -24,6 +27,6 @@
     "npm-run-all": "^4.1.5",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
-    "vue-tsc": "^1.2.1"
+    "vue-tsc": "^1.6.4"
   }
 }
