--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": ">=18 <20"
+    "node": "18.16.0"
   },
   "scripts": {
     "dev": "vite",
